FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Mgmt_Shadowed__c.field-meta.xml
<CustomField>
    <fullName>Mgmt_Shadowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Manager who shadowed this Credit Risk record to indicate they have done it. SAL-2307</description>
    <inlineHelpText>For management to denote that an account has gone through management review</inlineHelpText>
    <label>Mgmt Shadowed</label>
    <type>Checkbox</type>
</CustomField>