FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/MM_on_ACH_Direct_Debit_Approved__c.field-meta.xml
<CustomField>
    <fullName>MM_on_ACH_Direct_Debit_Approved__c</fullName>
    <description>Money moved approved for ACH/Direct Debit transactions by credit risk. SAL-2516</description>
    <inlineHelpText>Money moved approved for ACH/Direct Debit transactions by credit risk</inlineHelpText>
    <label>MM on ACH/Direct Debit Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>