FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/MM_on_Cards_Approved__c.field-meta.xml
<CustomField>
    <fullName>MM_on_Cards_Approved__c</fullName>
    <description>Money moved approved on cards by credit risk.</description>
    <inlineHelpText>Money moved approved on cards by credit risk.</inlineHelpText>
    <label>MM on Cards Approved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>