FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>The date in which Credit Risk will reassess the client and the risk exposure.</description>
    <inlineHelpText>The date in which Credit Risk will reassess the client and the risk exposure.</inlineHelpText>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>