FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Peak_Months__c.field-meta.xml
<CustomField>
    <fullName>Peak_Months__c</fullName>
    <description>The month(s) in which the client provides the bulk of services.</description>
    <inlineHelpText>The month(s) in which the client provides the bulk of services.</inlineHelpText>
    <label>Peak Months</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months</valueSetName>
    </valueSet>
</CustomField>