FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Peak_Risk_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Peak_Risk_Exposure__c</fullName>
    <description>The peak risk exposure.</description>
    <inlineHelpText>The peak risk exposure.</inlineHelpText>
    <label>Peak Risk Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>