FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Pending_Items_Requested__c.field-meta.xml
<CustomField>
    <fullName>Pending_Items_Requested__c</fullName>
    <description>Items needed to status the account.</description>
    <inlineHelpText>Items required, still pending to status the account.</inlineHelpText>
    <label>Pending Items Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Income Statement</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement</fullName>
            </value>
            <value>
                <fullName>Card Processing Statement(s)</fullName>
            </value>
            <value>
                <fullName>Bank Statement(s)</fullName>
            </value>
            <value>
                <fullName>Clarification on the Prepayment Profile</fullName>
            </value>
            <value>
                <fullName>Clarification of Money Moved/Money Moved on Cards</fullName>
            </value>
            <value>
                <fullName>Website/URL</fullName>
            </value>
            <value>
                <fullName>Clarification on Terms and other Policies</fullName>
            </value>
            <value>
                <fullName>Guarantor Clause</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>