FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <description>The type of credit risk assessment performed: Criteria Based Approval vs Credit Risk Review.</description>
    <inlineHelpText>The type of credit risk assessment performed: Criteria Based Approval vs Credit Risk Review.</inlineHelpText>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>CRR</fullName>
            </value>
            <value>
                <fullName>Portfolio Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>