FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Risk_Exposure_NDX__c.field-meta.xml
<CustomField>
    <fullName>Risk_Exposure_NDX__c</fullName>
    <description>The monetary value of the outstanding risk exposure.</description>
    <inlineHelpText>The monetary value of the outstanding risk exposure.</inlineHelpText>
    <label>Risk Exposure (NDX)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>