FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Shadowed_ByOn__c.field-meta.xml
<CustomField>
    <fullName>Shadowed_ByOn__c</fullName>
    <description>CreditRisk Mgmt Shadowed Flow Automatically fill in who checked the &apos;Mgmt Shadowed&apos;  checkbox and when.</description>
    <inlineHelpText>Automatically fill in who checked the &apos;Mgmt Shadowed&apos;  checkbox and when.</inlineHelpText>
    <label>Shadowed By/On</label>
    <length>100</length>
    <type>Text</type>
</CustomField>