FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Status_By__c.field-meta.xml
<CustomField>
    <fullName>Status_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of Approver</description>
    <inlineHelpText>Name of person who Approved this Credit Risk Record.</inlineHelpText>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Credit_Risk_s</relationshipName>
    <type>Lookup</type>
</CustomField>