FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Sub_Industry__c.field-meta.xml
<CustomField>
    <fullName>Sub_Industry__c</fullName>
    <formula>TEXT(Account__r.Account_Sub_Industry__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Industry</label>
    <type>Text</type>
</CustomField>