FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Tier_Level__c</fullName>
    <description>Risk Level determined by the subvertical (subIndustry)</description>
    <inlineHelpText>Risk Level determined by the subvertical.</inlineHelpText>
    <label>Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>