FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Auto Pulls Account Industry</description>
    <formula>TEXT(Account__r.Account_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto Pulls Account Industry</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>