FLY wire David/force-app/main/default/objects/Credit_Risk__c/fields/WADD__c.field-meta.xml
<CustomField>
    <fullName>WADD__c</fullName>
    <description>Weighted Average Delivery Days (WADD)</description>
    <inlineHelpText>Weighted Average Delivery Days - The average number of days representing the outstanding risk exposure.</inlineHelpText>
    <label>WADD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>