FLY wire David/force-app/main/default/objects/Credit_Risk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>Vertical__c</columns>
    <columns>Sub_Industry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>