FLY wire David/force-app/main/default/objects/Credit_Risk__c/listViews/All_Credit_Risk_Records.listView-meta.xml
<ListView>
    <fullName>All_Credit_Risk_Records</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Credit_Risk_Status__c</columns>
    <columns>Date_Approved__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Credit Risk Records</label>
</ListView>